Added stuff on Account

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -3,3 +3,4 @@ align.preset               = more
 maxColumn                  = 120
 rewrite.rules              = [AsciiSortImports]
 spaces.inImportCurlyBraces = true
+runner.dialect = scala3
