Added docker stuff and some changes to make postgres docker image run

--- a/modules/core/src/main/resources/application.conf
+++ b/modules/core/src/main/resources/application.conf
@@ -4,11 +4,11 @@ tradex {
     minAccountNoLength = 5
     zeroBalanceAllowed = true
   }
-  postgreSQLConfig {
+  postgreSQL {
     host = "localhost",
     port = 5432,
     user = "postgres",
-    password = "",
+    password = "toughgraff",
     database = "trading",
     max = 10
   }
