Misc refactoring and version upgrades

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -4,3 +4,4 @@ maxColumn                  = 120
 rewrite.rules              = [AsciiSortImports]
 spaces.inImportCurlyBraces = true
 runner.dialect = scala3
+project.includeFilters = [".*\\.scala$"]
